// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the style 1`] = `
<DocumentFragment>
  <div
    class="css-mr4uxt"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </div>
</DocumentFragment>
`;

exports[`should display CBox with type as header 1`] = `
<DocumentFragment>
  <header
    class="css-fzcsno"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </header>
</DocumentFragment>
`;

exports[`should display CBox with type as p 1`] = `
<DocumentFragment>
  <p
    class="css-fzcsno"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </p>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-fzcsno"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </div>
</DocumentFragment>
`;
